--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,12 @@
-
+services:
+- type: web
+name: wordle-game
+env: python
+plan: free
+buildCommand: pip install -r requirements.txt
+startCommand: gunicorn app:app
+repo: https://github.com/yourusername/wordle-game # Replace with your repo
+autoDeploy: true
+envVars:
+- key: PYTHON_VERSION
+value: 3.9
