--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,15 @@ services:
     name: wurdle
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app:app"  # Updated start command
+    startCommand: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app:app"
     envVars:
       - key: PYTHONUNBUFFERED
         value: "1"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: wurdle-db
+          property: connectionString
     disk:
       name: wurdle-disk
-      mountPath: /opt/render/project/src/wordle.db
+      mountPath: /opt/render/project/src  # Optional, can be removed since we're using Postgres
       sizeGB: 1
