--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.2
 matplotlib==3.7.1
-gunicorn==20.1.0
+gunicorn==23.0.0
 uvicorn==0.22.0
-psycopg2-binary==2.9.9
+psycopg==3.2.2  # Updated to psycopg3, compatible with Python 3.13
